Actualizando rutas fotos

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                                 <div class="points center">
                                     312 Asesorias
                                 </div>
-                                <img src="/assets/img/team/Ximena Garrido Ramirez.JPG" class="img-profile">
+                                <img src="assets/img/team/Ximena.JPG" class="img-profile">
                             </div>
                             <div class="more-info">
                                 <h1>Ximena Garrido Ramírez</h1>
@@ -246,7 +246,7 @@
                                 <div class="points center">
                                     312 Asesorias
                                 </div>
-                                <img src="/assets/img/team/Candy Belen López Herrera.jpg" class="img-profile">
+                                <img src="assets/img/team/Candy.jpg" class="img-profile">
                             </div>
                             <div class="more-info">
                                 <h1>Candy Belén López Herrera</h1>
@@ -298,7 +298,7 @@
                                 <div class="points center">
                                     312 Asesorias
                                 </div>
-                                <img src="/assets/img/team/Guadalupe Hernandez ramirez.jpg" class="img-profile">
+                                <img src="assets/img/team/Guadalupe.jpg" class="img-profile">
                             </div>
                             <div class="more-info">
                                 <h1>Guadalupe Hernández Ramírez</h1>
@@ -350,7 +350,7 @@
                                 <div class="points center">
                                     312 Asesorias
                                 </div>
-                                <img src="/assets/img/team/Vanesa Huerta Hernandez.jpg" class="img-profile">
+                                <img src="assets/img/team/Vanesa.jpg" class="img-profile">
                             </div>
                             <div class="more-info">
                                 <h1>Vanessa Huerta Hernandez</h1>
@@ -402,7 +402,7 @@
                                 <div class="points center">
                                     312 Asesorias
                                 </div>
-                                <img src="/assets/img/team/Mariela osmara Molina romero.jpeg" class="img-profile">
+                                <img src="assets/img/team/Mariela.jpeg" class="img-profile">
                             </div>
                             <div class="more-info">
                                 <h1>Mariela Osmara Molina Romero</h1>
@@ -454,7 +454,7 @@
                                 <div class="points center">
                                     312 Asesorias
                                 </div>
-                                <img src="/assets/img/team/Monica yamileth Marcial gonzalez.jpeg" class="img-profile">
+                                <img src="assets/img/team/Monica.jpeg" class="img-profile">
                             </div>
                             <div class="more-info">
                                 <h1>Mónica Yamileth Marcial González</h1>
@@ -506,7 +506,7 @@
                                 <div class="points center">
                                     312 Asesorias
                                 </div>
-                                <img src="/assets/img/team/Daniela Juarez romero.jpg" class="img-profile">
+                                <img src="assets/img/team/Daniela.jpg" class="img-profile">
                             </div>
                             <div class="more-info">
                                 <h1>Daniela Juárez Romero</h1>
@@ -558,7 +558,7 @@
                                 <div class="points center">
                                     312 Asesorias
                                 </div>
-                                <img src="/assets/img/team/Tania Martinez mendoza.jfif" class="img-profile">
+                                <img src="assets/img/team/Tania.jfif" class="img-profile">
                             </div>
                             <div class="more-info">
                                 <h1>Tania Martínez Mendoza</h1>
@@ -610,7 +610,7 @@
                                 <div class="points center">
                                     312 Asesorias
                                 </div>
-                                <img src="/assets/img/team/Mireya Gonzalez Ceron.jpg" class="img-profile">
+                                <img src="assets/img/team/Mireya.jpg" class="img-profile">
                             </div>
                             <div class="more-info">
                                 <h1>Mireya González Cerón</h1>
@@ -870,7 +870,7 @@
                                 <div class="points center">
                                     312 Asesorias
                                 </div>
-                                <img src="/assets/img/team/Blanca Sarah Mendoza Carrera.jpeg" class="img-profile">
+                                <img src="/assets/img/team/Blanca.jpeg" class="img-profile">
                             </div>
                             <div class="more-info">
                                 <h1>Blanca Sarah Mendoza Carrera</h1>
